--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.19.2",
+    "bcrypt": "^5.0.0",
     "connect-mongo": "^3.2.0",
     "ejs": "^3.0.2",
     "express": "^4.17.1",
